# pipeonjoy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  main.py  pipeonjoy.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
audio/: engine.py
build_scripts/: README.md  build_mac.sh  build_win.ps1
docs/: decisions.md
generator/: midi_export.py  stems.py  wav_render.py
wizard/: lyrics_analysis.py  release.py  sample_analysis.py  steps.py
