[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pipeonjoy"
version = "0.1.0"
description = "Vaporwave composition wizard — AI-free, lyrics-driven, modal"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "sounddevice>=0.4",
    "numpy>=1.26",
    # lyrics analysis
    "nrclex>=3.0",
    "vaderSentiment>=3.3",
    "pronouncing>=0.2",
]

[project.optional-dependencies]
# v2.0 sample analysis — install separately when ready
sample = [
    "librosa>=0.10",
    "yt-dlp>=2024.1",
]
dev = ["pytest", "black", "ruff"]

[project.scripts]
pipeonjoy = "main:main"
