[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeonjoy"
version = "0.1.1"
description = "Vaporwave composition wizard — AI-free, lyrics-driven, modal"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "nrclex>=3.0",
    "vaderSentiment>=3.3",
    "pronouncing>=0.2",
    "pyfluidsynth>=1.3",
    "midi2audio>=0.1",
    "pydub>=0.25",
    "pillow>=10.0",
    "pyinstaller>=6.0",
]

[project.optional-dependencies]
sample = [
    "librosa>=0.10",
    "yt-dlp>=2024.1",
]
dev = ["pytest", "black", "ruff"]

[project.scripts]
pipeonjoy = "main:main"

[tool.setuptools.packages.find]
include = ["wizard*", "audio*", "generator*", "theory*"]
